--- a/python-fastapi-microservices/movie-service/requirements.txt
+++ b/python-fastapi-microservices/movie-service/requirements.txt
@@ -1,15 +1,20 @@
 anyio==3.6.2
 asyncpg==0.27.0
+certifi==2022.12.7
 click==8.1.3
 databases==0.7.0
 fastapi==0.89.1
 greenlet==2.0.1
 h11==0.14.0
+httpcore==0.16.3
 httptools==0.5.0
+httpx==0.23.3
 idna==3.4
+psycopg2==2.9.5
 pydantic==1.10.4
 python-dotenv==0.21.0
 PyYAML==6.0
+rfc3986==1.5.0
 sniffio==1.3.0
 SQLAlchemy==1.4.46
 starlette==0.22.0
