PY_WEB: updated the cast_service_host_url env-var value in the docker-compose yaml

--- a/fastapi-microservices/docker-compose.yaml
+++ b/fastapi-microservices/docker-compose.yaml
@@ -13,7 +13,7 @@ services:
       - 8081:8080
     environment:
       - DATABASE_URI=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@pgsql_db:5432/${POSTGRES_MOVIE_DB}
-      - CAST_SERVICE_HOST_URL="http://cast-service:8000/api/v1/casts"
+      - CAST_SERVICE_HOST_URL="http://cast_service:8082/api/v1/casts"
 
   cast_service:
     container_name: cast_service
