PY_WEB: Updated the fastapi-microservice app helm charts generated by kompose.

--- a/fastapi-microservices/fastapi-microservices-helm/templates/cast-service-deployment.yaml
+++ b/fastapi-microservices/fastapi-microservices-helm/templates/cast-service-deployment.yaml
@@ -35,7 +35,7 @@ spec:
             - "8080"
           env:
             - name: DATABASE_URI
-              value: postgresql://:@pgsql_db:5432/
+              value: postgresql://:@pgsql-db:5432/
           image: cast-service
           name: cast-service
           ports:
