--- a/fastapi-microservices/fastapi-microservices-helm/templates/cast-service-service.yaml
+++ b/fastapi-microservices/fastapi-microservices-helm/templates/cast-service-service.yaml
@@ -6,14 +6,14 @@ metadata:
     kompose.version: 1.26.0 (40646f47)
   creationTimestamp: null
   labels:
-    io.kompose.service: movie-service
-  name: movie_service
+    io.kompose.service: cast-service
+  name: cast-service
 spec:
   ports:
-    - name: "8081"
-      port: 8081
+    - name: "8082"
+      port: 8082
       targetPort: 8080
   selector:
-    io.kompose.service: movie-service
+    io.kompose.service: cast-service
 status:
   loadBalancer: {}
