--- a/fastapi-microservices/fastapi-microservices-helm/templates/pgsql-db-service.yaml
+++ b/fastapi-microservices/fastapi-microservices-helm/templates/pgsql-db-service.yaml
@@ -6,14 +6,14 @@ metadata:
     kompose.version: 1.26.0 (40646f47)
   creationTimestamp: null
   labels:
-    io.kompose.service: cast-service
-  name: cast_service
+    io.kompose.service: pgsql-db
+  name: pgsql-db
 spec:
   ports:
-    - name: "8082"
-      port: 8082
-      targetPort: 8080
+    - name: "5432"
+      port: 5432
+      targetPort: 5432
   selector:
-    io.kompose.service: cast-service
+    io.kompose.service: pgsql-db
 status:
   loadBalancer: {}
