--- a/fastapi-microservices/movie-service/Dockerfile
+++ b/fastapi-microservices/movie-service/Dockerfile
@@ -14,3 +14,5 @@ RUN pip install -r /app/requirements.txt \
     && rm -rf /root/.cache/pip
 
 COPY . /app/
+
+ENTRYPOINT ["uvicorn", "app.main:app", "--reload", "--port", "8080"]
