--- a/fastapi-microservices/fastapi-microservices-helm/templates/movie-service-deployment.yaml
+++ b/fastapi-microservices/fastapi-microservices-helm/templates/movie-service-deployment.yaml
@@ -25,20 +25,18 @@ spec:
         io.kompose.service: movie-service
     spec:
       containers:
-        - args:
-            - uvicorn
-            - app.main:app
-            - --reload
-            - --host
-            - 0.0.0.0
-            - --port
-            - "8080"
-          env:
+        - env:
+            - name: POSTGRES_USER
+              value: ""
+            - NAME: POSTGRES_PASSWORD
+              value: ""
+            - NAME: POSTGRES_MOVIE_DB
+              value: "movie_db"
             - name: CAST_SERVICE_HOST_URL
               value: http://cast-service:8080/api/v1/casts
             - name: DATABASE_URI
-              value: postgresql://:@pgsql-db:5432/
-          image: movie-service
+              value: postgresql://$(POSTGRES_USER):$(POSTGRES_PASSWORD)@pgsql-db:5432/$(POSTGRES_MOVIE_DB)
+          image: fastapi-microservices_movie_service:latest
           name: movie-service
           ports:
             - containerPort: 8080
