--- a/flask-celery-app/Dockerfile
+++ b/flask-celery-app/Dockerfile
@@ -11,7 +11,7 @@ ENV PYTHONUNBUFFERED 1
 # install dependencies
 RUN pip install --upgrade pip
 COPY ./requirements.txt .
-RUN pip install -r requirements --no-cache-dir
+RUN pip install -r requirements.txt --no-cache-dir
 
 # copy project
 COPY . .
