PY_WEB: Flask-celery-app - Updated the k8s PV config with node-affinity attribute

--- a/flask-celery-app/flask-celery-app-charts/templates/web-pv0-persistentvolume.yaml
+++ b/flask-celery-app/flask-celery-app-charts/templates/web-pv0-persistentvolume.yaml
@@ -1,14 +1,24 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-name: web-pv0
+  name: web-pv0
+  labels:
+    type: local
 spec:
-capacity:
-  storage: 100Mi
-volumeMode: Filesystem
-accessModes:
-  - ReadWriteOnce
-persistentVolumeClaimPolicy: Retain
-storageClassName: local-storage
-local:
-  path: /opt/k8s/storage/web-pv0
+  capacity:
+    storage: 100Mi
+  volumeMode: Filesystem
+  accessModes:
+    - ReadWriteOnce
+  persistentVolumeReclaimPolicy: Retain
+  storageClassName: local-storage
+  local:
+    path: /opt/k8s/storage/web-pv0
+  nodeAffinity:
+    required:
+      nodeSelectorTerms:
+        - matchExpressions:
+            - key: kubernetes.io/hostname
+              operator: In
+              values:
+                - home-lab
