--- a/flask-celery-app/flask-celery-app-charts/templates/worker-pv0-persistentvolume.yaml
+++ b/flask-celery-app/flask-celery-app-charts/templates/worker-pv0-persistentvolume.yaml
@@ -1,14 +1,22 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-name: worker-pv0
+  name: worker-pv0
 spec:
-capacity: 
-  storage: 100Mi
-volumeMode: Filesystem
-accessModes:
-  - ReadWriteOnce
-persistentVolumeClaimPolicy: Retain
-storageClassName: local-storage
-local:
-  path: /opt/k8s/storage/worker-pv0 
+  capacity: 
+    storage: 100Mi
+  volumeMode: Filesystem
+  accessModes:
+    - ReadWriteOnce
+  persistentVolumeReclaimPolicy: Retain
+  storageClassName: local-storage
+  local:
+    path: /opt/k8s/storage/worker-pv0 
+  nodeAffinity:
+    required:
+      nodeSelectorTerms:
+        - matchExpressions:
+            - key: kubernetes.io/hostname
+              operator: In
+              values:
+                - home-lab
