PY_WEB: Flask-celery-app - Updated the k8s PVC with PV config spec.

--- a/flask-celery-app/flask-celery-app-charts/templates/worker-claim0-persistentvolumeclaim.yaml
+++ b/flask-celery-app/flask-celery-app-charts/templates/worker-claim0-persistentvolumeclaim.yaml
@@ -11,4 +11,7 @@ spec:
   resources:
     requests:
       storage: 100Mi
+  storageClassName: local-storage
+  volumeMode: Filesystem
+  volumeName: worker-pv0
 status: {}
