--- a/flask-celery-app/flask-celery-app-charts/templates/web-claim0-persistentvolumeclaim.yaml
+++ b/flask-celery-app/flask-celery-app-charts/templates/web-claim0-persistentvolumeclaim.yaml
@@ -11,4 +11,7 @@ spec:
   resources:
     requests:
       storage: 100Mi
+  storageClassName: local-storage
+  volumeMode: Filesystem
+  volumeName: web-pv0
 status: {}
